move 0.7 tag